API update
-Auth
-Hidden entry points are no longer hidden
