# apiServer/app/controllers/databaseController.js
@@ -1,19 +1,20 @@
 'use strict';
 const DatabaseContrl = require('../service/DatabaseControllerService');
 
-var express = require('express');
-var router = express.Router();
+// var express = require('express');
+// var router = express.Router();
 
 
 /**
-    http://localhost:8080/databaseController/dump
+ http://localhost:8080/databaseController/dump
 
-    /Get -> Returns current state of DB
-    /Post w/ json -> Clears and loads data to DB
+ /Get -> Returns current state of DB
+ /Post w/ json -> Clears and loads data to DB
 
-   */
+ */
 
-router.get('/dump', function (req, res, next) {
+// router.get('/dump', function (req, res, next) {
+module.exports.getDump = function getDump(req, res, next) {
     DatabaseContrl.getDump()
         .then(function (response) {
             res.status(200).send(response);
@@ -21,10 +22,11 @@ router.get('/dump', function (req, res, next) {
         .catch(function (response) {
             res.status(400).send(response);
         });
-});
+// });
+};
 
-
-router.post('/dump', function (req, res, next) {
+// router.post('/dump', function (req, res, next) {
+module.exports.postDump = function postDump(req, res, next) {
     DatabaseContrl.postLoad(req.body)
         .then(function (response) {
             res.status(200).send(response);
@@ -32,9 +34,12 @@ router.post('/dump', function (req, res, next) {
         .catch(function (response) {
             res.status(400).send(response);
         });
-});
+// });
+};
 
-router.get('/reset', function (req, res, next) {
+
+// router.get('/reset', function (req, res, next) {
+module.exports.getReset = function getReset(req, res, next) {
     const empty = {};
     DatabaseContrl.postLoad(empty)
         .then(function (response) {
@@ -43,8 +48,8 @@ router.get('/reset', function (req, res, next) {
         .catch(function (response) {
             res.status(400).send(response);
         });
-});
+// });
+};
 
 
-
-module.exports = router;
+// module.exports = router;
